kubernetes/apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-svc
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
