kubernetes/apps/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: it-tools.70ld.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools-svc
                port:
                  number: 80
